# quick_aqi

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/: rust-ci.yml
.github/workflows/: rust-ci.yml
libs/aqi/: Cargo.toml
libs/aqi/src/: lib.rs
src/: aqi.rs  lib.rs  main.rs  pmsa003i.rs
tests/: unit.rs
